documentation/versioned_docs/version-1.x/examples/cad-2doverlay.mdx
---
id: cad-2doverlay
title: HTML overlays
description: Demo shows how to add an HTML overlay over 3D objects.
---

import { DemoWrapper } from '@site/versioned_docs/version-1.x/components/DemoWrapper';
import useBaseUrl from '@docusaurus/useBaseUrl';

A common requirement for a 3D application is to add information overlays hovering over 3D objects
to provide details or draw the attention to a given point. This can be done by placing HTML elements over the 3D canvas
that follows the object it's attached to. Note that these overlays always will be placed on top of the 3D viewer,
they will not be hidden when the object is obscured by other objects.
To achieve this it's necessary to use custom 3D objects.

:::note
There should be a limited number of HTML overlay elements as it can impact performance negatively if there's too many.
:::

<DemoWrapper name="Cognite3DViewerDemo" />

Attaching HTML elements to 3D objects/positions requires the following operations:

1. Create an HTML element and apply style `position: absolute` to the element. There also some other recommended
   styles that should be applied (see below).
2. Determine 3D world coordinate of the pivot point (e.g. using intersection when user clicks an object)
3. Attach overlay using `HtmlOverlayTool.add`.

This will attach the overlay to the 2D position corresponding to the 3D coordinate, then it will provide the updated
coordinate whenever navigating the viewer.

There might be "any" number of attached HTML overlays in a viewer, but avoid too many to avoid cluttering the
view.

```jsx runnable-1x
// import { HtmlOverlayTool } from '@cognite/reveal/tools';

function createOverlay() {
  const element = document.createElement('div');
  element.innerText = `Overlay!`;
  element.style.cssText = `
    position: absolute;

    /* Anchor to the center of the element and ignore events */
    transform: translate(-50%, -50%);
    pointer-events: none;
    touch-action: none;

    /* Make it look nice */
    padding: 10px;
    minHeight: 50px;
    color: #fff;
    background: #232323da;
    borderRadius: 0.25em;
    border: '#ffffff22 solid 2px;
  `;
  return element;
}

// Attach overlay on click
const overlays = new HtmlOverlayTool(viewer);
viewer.on('click', event => {
  // Find 3D coordinate of what the user clicks
  const intersection = viewer.getIntersectionFromPixel(event.offsetX, event.offsetY);
  if (intersection) {
    const el = createOverlay();
    overlays.add(el, intersection.point);
    // Remove overlay after 5 seconds
    setTimeout(() => overlays.remove(el), 5000);
  }
});
```

It's also possible to apply styling based on the position of the
overlay, e.g. to vary the opacity of the overlay based on distance
from the camera. To do this, provide an `options`-argument with a
`positionUpdatedCallback` to `HtmlOverlayTool.add`. This
callback is triggered every time the HTML overlay is updated.

```jsx runnable-1x
// import { HtmlOverlayTool } from '@cognite/reveal/tools';

function createOverlay() {
  const pressure = Math.floor(Math.random() * 110);
  const color = pressure < 30 ? '#fff' : (pressure > 80 ? '#aa1100' : '#aaaa00');
  const element = document.createElement('div');
  element.innerText = `${pressure} PSI`;
  element.style.cssText = `
    position: absolute;

    /* Anchor to the center of the element and ignore events */
    transform: translate(-50%, -50%);
    pointer-events: none;
    touch-action: none;

    /* Make it look nice */
    padding: 10px;
    color: ${color};
    background: #232323da;
    borderRadius: 0.25em;
    border: '#ffffff22 solid 2px;
  `;
  return element;
}

const overlays = new HtmlOverlayTool(viewer);
viewer.on('click', event => {
  // Find 3D coordinate of what the user clicks
  const intersection = viewer.getIntersectionFromPixel(event.offsetX, event.offsetY);
  if (intersection) {
    const el = createOverlay();
    const options = {
      positionUpdatedCallback: (element, position2D, position3D, distanceToCamera) => {
        // Compute opacity based on distance to camera
        const opacity = 0.3 + 0.7 * (1.0 - (Math.min(Math.max(distanceToCamera, 10), 110) - 10) / 100.0);
        element.style.opacity = opacity;
      }
    };
    overlays.add(el, intersection.point, options);
  }
});
```

As shown above, overlays can be removed using `remove()`. It is also possible to remove all
overlays by calling `clear()` or by disposing the tool using `dispose()`. The tool cannot
be used after calling `dispose()`.
